# grep-table-converter

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  input.txt
src/: generator.rs  io.rs  lib.rs  main.rs
