[package]
name = "grep-table-converter"
version = "0.1.0"
authors = ["zeroclock <zeroclock@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
log = "0.4.8"
pretty_env_logger = "0.4.0"
anyhow = "1.0.28"
atty = "0.2.14"
chrono = "0.4.11"
