[package]
name = "grep-table-converter"
version = "0.0.3"
authors = ["zeroclock <zeroclock@icloud.com>"]
edition = "2018"
description = "A cli utility to convert grep result to table (csv, markdown, textile)."
license = "MIT OR Apache-2.0"

[[bin]]
path = "src/main.rs"
name = "gtc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
log = "0.4.8"
pretty_env_logger = "0.4.0"
anyhow = "1.0.28"
atty = "0.2.14"
chrono = "0.4.11"
